SPRING WEB SERVICES CHANGELOG
=============================
http://www.springframework.org/spring-ws

Changes in version 1.0-M2
-------------------------
Package org.springframework.ws.soap
* improved content-type handling (#SWS-32)

Package org.springframework.ws.transport.http
* removed J2EE 1.4 dependency (#SWS-31)

Changes in version 1.0-M1
-------------------------

Package org.springframework.oxm.jaxb
* added support for JAXB 2: refactored JaxbMarshaller into AbstractJaxbMarshaller, Jaxb1Marshaller and Jaxb2Marshaller
* made JaxbMarshallers thread safe
* added property for a ValidationEventHandler

Package org.springframework.ws.axiom
* added AXIOM (AXis Object Model) implementation of SoapMessage hierarchy

Package org.springframework.ws.endpoint
* added AbstractDom4JPayloadEndpoint
* added AbstractXomPayloadEndpoint
* renamed AbstractTransformingEndpoint to TransformerObjectSupport

Package org.springframework.ws.soap
* added SoapFaultDetail and SoapFaultDetailElement
* improved SoapMessage test suite
* fixed serious bug which resulted in not-understood mustUnderstand headers being silently ignored

Package org.springframework.ws.soap.endpoint
* added SimpleSoapExceptionResolver

Package org.springframework.ws.soap.security.xwss
* added WS-Security implementation based on XWS-Security with integration for Acegi and JAAS

Package org.springframework.xml.transform
* added StaxSource and StaxResult, which allow for StAX readers/writers to be used as javax.xml.transform.Source and
  javax.xml.transform.Result

Package org.springframework.xml.xpath
* added XPath abstraction with support for JAXP 1.3, Jaxen, and Xalan

Samples
* Added Ingo Siebert's Echo sample
* Added WS-Security support to Airline sample
* Added SAAJ clients to Airline sample


Changes in version 0.9.1 (06.04.2006)
-------------------------------------

Overall
* made overall thread safety fixes
* added initial reference documentation in HTML and PDF form
* (lots of minor bugfixes)
